--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				</div>
 				<div class="col-lg-6 mt-4"> <!-- coluna 2, linha 1-->
 					<div class="card">
-						<img class="card-img-top" src="portf/thumb/locadora.jpg" style="width: 100%">
+						<img class="card-img-top" src="portf/thumb/locadora.JPG" style="width: 100%">
 						<div class="card-body">
 							<h4 class="card-title">Locadora de Filmes</h4>
 							<p>Outro trabalho envolvente, onde trabalhamos o uso extenso de colunas e tabelas, com o uso de formulário, neste caso,
