--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 					</div>
 
 					<div class="col-lg-6 " >
-						<a href="https://github.com/Paulo-de-Carvalho/front-end.git"></a>
+						<a href="https://github.com/Paulo-de-Carvalho/dev-front-end"></a>
 							<i class="fa-brands fa-github contactIcon mt-4"></i>
 						</a>
 					</div>
